--- a/css/style.css
+++ b/css/style.css
@@ -1,412 +1,608 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+/*--------------- basic styling --------------- */
+html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      font-family: "Roboto Mono" !important;
+      background: #0f0f0f !important;
+      color: #fff !important;
 }
 
-body {
-  display: grid;
-  grid-template-rows: auto 92vh 35em 20em;
-  grid-template-columns: auto;
-  grid-template-areas:
-  "header header header header header"
-  "hero   hero   hero   hero   hero"
-  " main   main   main   main   main"
-  " form   form   form   form  form "
-  " footer footer footer footer footer ";
-  /* background: black; */
+.whitespace {
+      width: 100%;
+      height: 100px;
 }
 
-header {
-  grid-area: header;
-  background: grey;
+@media(max-width: 768px) {
+      .whitespace {
+            display: none;
+      }
 }
 
+/*--------------- typewriter effect --------------- */
+.line {
+      width: 24em;
+      top: 50%;
+      margin: auto;
+      border-right: 2px solid rgba(255, 255, 255, 0.75);
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      transform: translateY(-50%);
+}
+
+.anim-typewriter {
+      animation: typewriter 4s steps(40) 1s 1 normal both,
+      blinkTextCussor 500ms steps(40) infinite normal;
+}
+
+@keyframes typewriter {
+      from {
+            width: 0;
+      }
+      to {
+            width: 24em;
+      }
+}
+
+@media(max-width: 768px) {
+      @keyframes typewriter {
+            from {
+                  width: 0;
+            }
+            to {
+                  width: 24em;
+                  font-size: 21px;
+            }
+      }
+}
+
+@keyframes blinkTextCussor {
+      from {
+            border-right-color: rgba(255, 255, 255, 0.75);
+      }
+      to {
+            border-right-color: transparent;
+      }
+}
+
+/*--------------- navigation --------------- */
 nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
-  background-color: #232323;
+      width: 100%;
+      background: #0f0f0f;
+      height: 80px;
+      position: fixed;
+      z-index: 1;
 }
 
-.social-icons a {
-  color: #232323;
+nav #brand {
+      float: left;
+      display: block;
+      margin-left: 82px;
+      line-height: 80px;
+      font-weight: bold;
 }
 
-.social-icons i {
-  color: #fff;
-  margin-right: .5em;
+nav #brand a {
+      color: #fff;
+      transition: all 0.3s ease-out;
 }
 
-.nav-links {
-  display: flex;
-  justify-content: space-around;
-  width: 35em;
+nav #brand a:hover {
+      text-decoration: none;
 }
 
-.nav-links li {
-  list-style-type: none;
+nav #menu {
+      float: left;
+      right: 80px;
+      position: fixed;
 }
 
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 1px;
+nav #menu li {
+      padding-left: 40px;
+      display: inline-block;
+      cursor: pointer;
+      font-weight: 300;
+      line-height: 80px;
+      position: relative;
+      transition: all 0.3s ease-out;
 }
 
-.burger {
-  display: none;
-  cursor: pointer;
+nav #menu li span {
+      font-weight: 700;
 }
 
-.burger div {
-  width: 25px;
-  height: 3px;
-  border-radius: 30%;
-  background-color: #fff;
-  margin: 5px;
-  transition: all 0.3 ease;
+nav #menu li a {
+      color: #fff;
 }
 
+nav #menu li a:hover {
+      text-decoration: none;
+}
+
+#toggle {
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      font-weight: 300;
+      z-index: 2;
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+      float: right;
+      transition: all 0.3s ease-out;
+      visibility: hidden;
+      opacity: 0;
+}
+
+.close-btn {
+      position: absolute;
+      right: 16px;
+      font-weight: 300;
+      z-index: 2;
+      cursor: pointer;
+      top: -2px;
+      line-height: 80px;
+}
+
+#resize {
+      z-index: 1;
+      top: 0px;
+      position: fixed;
+      background: #0f0f0f;
+      width: 100%;
+      height: 100%;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 1s ease-out;
+}
+
+#resize #menu {
+      height: 90px;
+      position: absolute;
+      left: 45%;
+      transform: translateX(-40%);
+      text-align: center;
+      display: table-cell;
+      vertical-align: center;
+}
+
+#resize #menu li {
+      display: block;
+      text-align: center;
+      padding: 10px 0;
+      font-size: 50px;
+      min-height: 50px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease-out;
+}
+
+#resize li:nth-child(1) {
+      margin-top: 140px;
+}
+
+#resize #menu li a {
+      color: #fff;
+}
+
+#resize #menu li a:hover {
+      text-decoration: none;
+}
+
+#resize.active {
+      visibility: visible;
+      opacity: 1;
+}
+
+@media(max-width: 768px) {
+      #toggle {
+            visibility: visible;
+            opacity: 1;
+            margin-top: 6px;
+            margin-right: 4px;
+      }
+
+      nav #brand {
+            margin-left: 24px;
+      }
+
+      #menu a {
+            font-size: 20px;
+            font-weight: 300;
+      }
+
+      #resize li span {
+            font-weight: bolder;
+      }
+
+      nav #menu {
+            display: none;
+      }
+}
+
+@media(min-width: 768px) {
+      #resize {
+            visibility: hidden !important;
+      }
+}
+
+/*--------------- hero section --------------- */
 .hero {
-  grid-area: hero;
-  background: lightgreen;
-  background-image: url("../images/hero-bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 }
 
-.hero-title h2 {
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: center;
-  align-items: center;
-  padding-top: 3em;
-  color: #fff;
-  font-weight: 300;
-  font-size: 3em;
+.hero h1 {
+      font-weight: lighter;
+      text-align: center;
+      letter-spacing: -2px;
+      line-height: 58px;
 }
 
-.hero-title h3 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-top: 2em;
-  color: #fff;
-  font-weight: 300;
+@media(max-width: 768px) {
+      .header h1 {
+            font-size: 26px;
+      }
 }
 
-.scrolldown {
-  position: absolute;
-  bottom: -130px;
-  left: 50%;
-  width: 10%;
-  height: 110px;
-  transform: translateY(-120px) translateX(-50%) rotate(45deg);
-  /* opacity: 1; */
+/*--------------- scroll down icon animation --------------- */
+.scroll-down {
+      position: absolute;
+      left: 50%;
+      bottom: 100px;
+      display: block;
+      text-align: center;
+      font-size: 20px;
+      z-index: 0;
+      text-decoration: none;
+      text-shadow: 0;
+      width: 13px;
+      height: 13px;
+      border-bottom: 2px solid #fff;
+      border-right: 2px solid #fff;
+      -webkit-transform: translate(-50%, 0) rotate(45deg);
+      animation: fade_move_down 3s cubic-bezier(0.19, 1, 0.22, 1) infinite;
 }
 
-.scrolldown span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 30%;
-  height: 35%;
-  border-bottom: 2px solid #fff;
-  border-right: 2px solid #fff;
-  animation: animate 1.5s linear infinite;
-  opacity: 0;
+@keyframes fade_move_down {
+      0% {
+            transform: translate(0, -20px) rotate(45deg);
+            opacity: 0;
+      }
+      50% {
+            opacity: 1;
+      }
+      100% {
+            transform: translate(0, 20px) rotate(45deg);
+            opacity: 0;
+      }
 }
 
-.scrolldown span:nth-child(1) {
-  transform: translate(-15px, -15px);
-  animation-delay: -0.4s;
+/*--------------- projects section --------------- */
+h6 {
+      text-align: center;
 }
 
-.scrolldown span:nth-child(2) {
-  transform: translate(0, 0);
-  animation-delay: -0.2s;
+.vertical {
+      margin-top: 40px;
+      border-left: 1px solid #fff;
+      height: 80px;
+      position: absolute;
+      left: 50%;
 }
 
-.scrolldown span:nth-child(3) {
-  transform: translate(15px, 15px);
-  animation-delay: 0s;
+.project {
+      height: 500px;
 }
 
-main {
-  grid-area: main;
-  background: lightblue;
-  padding: 5em;
-  /* margin: 2em; */
+.project1 {
+      background: url(https://images.unsplash.com/photo-1540349220179-09d3866f2e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2600&q=80) no-repeat 50% 50%;
+      background-size: cover;
 }
 
-form {
-  grid-area: form;
-  background: green;
+.project1::after {
+      content: "timeless flow.";
+      font-family: "Roboto Mono";
+      font-size: 36px;
+      position: relative;
+      color: #fff;
+      display: block;
+      top: 8%;
+      left: -60%;
+      right: 0;
+      bottom: 0;
 }
 
-footer {
-  grid-area: footer;
-  background: pink;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.project2 {
+      background: url(https://images.unsplash.com/photo-1468870045442-e7d799d8c98a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2448&q=80) no-repeat 50% 50%;
+      background-size: cover;
 }
 
-
-/* media queries */
-
-@media screen and (max-width:1024px) {
-  .nav-links {
-    width: 30em;
-  }
-
-  .scrolldown {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    width: 20%;
-    height: 110px;
-    transform: translateY(-120px) translateX(-50%) rotate(45deg);
-    /* opacity: 1; */
-  }
-
-  .scrolldown span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 50%;
-    height: 50%;
-    border-bottom: 2px solid #fff;
-    border-right: 2px solid #fff;
-    animation: animate 1.5s linear infinite;
-    opacity: 0;
-  }
-
+.project2::after {
+      content: "foretime.";
+      font-family: "Roboto Mono";
+      font-size: 36px;
+      position: relative;
+      color: #fff;
+      display: block;
+      top: 80%;
+      left: 90%;
+      right: 0;
+      bottom: 0;
 }
 
-
-@media screen and (max-width:768px) {
-
-  body {
-    overflow-x: hidden;
-    display: grid;
-    grid-template-rows: auto 92vh 30em 15em;
-    grid-template-columns: auto;
-    grid-template-areas:
-    "header header header header header"
-    "hero   hero   hero   hero   hero"
-    " main   main   main   main   main"
-    " form      form   form   form   form "
-    " footer  footer   footer footer  footer ";
-    background: black;
-  }
-
-  .nav-links {
-    position: absolute;
-    right: 0px;
-    /* ends here */
-    height: 50vh;
-    /* starts here */
-    top: 8vh;
-    background-color: #232323;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* customizable */
-    width: 100%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
-
-  .nav-links li {
-    opacity: 0;
-  }
-
-  .burger {
-    display: block;
-  }
-
-  .scrolldown {
-    position: absolute;
-    bottom: -150px;
-    left: 50%;
-    width: 20%;
-    height: 110px;
-    transform: translateY(-120px) translateX(-50%) rotate(45deg);
-    /* opacity: 1; */
-  }
-
-  .scrolldown span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 35%;
-    height: 45%;
-    border-bottom: 2px solid #fff;
-    border-right: 2px solid #fff;
-    animation: animate 1.5s linear infinite;
-    opacity: 0;
-  }
-
+.project3 {
+      background: url(https://images.unsplash.com/photo-1482501157762-56897a411e05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80) no-repeat 50% 50%;
+      background-size: cover;
 }
 
+.project3::after {
+      content: "never again.";
+      font-family: "Roboto Mono";
+      font-size: 36px;
+      position: relative;
+      color: #fff;
+      display: block;
+      top: 80%;
+      left: -50%;
+      right: 0;
+      bottom: 0;
+}
 
-@media screen and (max-width:320px) {
+.project4 {
+      background: url(https://images.unsplash.com/photo-1435685813800-51ba4ceb9c4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1785&q=80) no-repeat 50% 50%;
+      background-size: cover;
+}
 
-  body {
-    overflow-x: hidden;
-    display: grid;
-    grid-template-rows: auto 92vh 30em 15em;
-    grid-template-columns: auto;
-    grid-template-areas:
-    "header header header header header"
-    "hero   hero   hero   hero   hero"
-    " .   main   main   main   ."
-    " .      form   form   form   . "
-    " .      footer   footer   footer   . ";
-    background: black;
-  }
+.project4::after {
+      content: "departure.";
+      font-family: "Roboto Mono";
+      font-size: 36px;
+      position: relative;
+      color: #fff;
+      display: block;
+      top: 10%;
+      left: 90%;
+      right: 0;
+      bottom: 0;
+}
 
-  .nav-links {
-    position: absolute;
-    right: 0px;
-    /* ends here */
-    height: 50vh;
-    /* starts here */
-    top: 8vh;
-    background-color: #232323;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* customizable */
-    width: 100%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
+@media(max-width: 768px) {
+      .project {
+            width: 90% !important;
+            margin: 14px auto;
+      }
 
-  .nav-links li {
-    opacity: 0;
-  }
+      .vertical {
+            display: none;
+      }
 
-  .burger {
-    display: block;
-  }
+      .project1::after, .project2::after, .project3::after, .project4::after {
+            display: none;
+      }
+}
 
-  .scrolldown {
-    position: absolute;
-    bottom: -150px;
-    left: 45%;
-    width: 20%;
-    height: 110px;
-    transform: translateY(-120px) translateX(-50%) rotate(45deg);
-    /* opacity: 1; */
-  }
+/*--------------- footer section --------------- */
+.collab {
+      text-align: right;
+}
 
-  .scrolldown span {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 35%;
-    height: 20%;
-    border-bottom: 2px solid #fff;
-    border-right: 2px solid #fff;
-    animation: animate 1.5s linear infinite;
-    opacity: 0;
-  }
+.collab p {
+      font-weight: lighter !important;
+      margin-bottom: 20px;
+}
 
+.hr {
+      background: rgba(255, 255, 255, 0.2);
+      height: 1px;
+}
+
+.info h4 {
+      font-size: 18px;
+      font-weight: lighter;
+}
+
+.info p {
+      color: grey;
+      font-weight: lighter;
+}
+
+.info li {
+      font-weight: lighter;
+      color: #fff;
+      font-size: 18px;
+      padding-left: 20px;
+}
+
+#lk::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #3b5998;
 }
 
 
-/* animations */
-
-@keyframes navLinkFade {
-  from{
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to{
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
-
-@keyframes animate {
-  0%
-  {
-    top: -5px;
-    left: -5px;
-    opacity: 0;
-  }
-  25%
-  {
-    top: 0px;
-    left: 0px;
-    opacity: 1;
-  }
-  50,100%
-  {
-    top: 5px;
-    left: 5px;
-    opacity: 0;
-  }
-}
-
-/* Classes added on click */
-
-.nav-active {
-  transform: translateX(0%);
-}
-
-.toggle .line1 {
-transform: rotate(-45deg) translate(-5px, 6px);
-transition: transform 0.5s ease-in;
-}
-
-.toggle .line2 {
-opacity: 0;
-}
-
-.toggle .line3 {
-transform: rotate(45deg) translate(-5px, -6px);
-transition: transform 0.5s ease-in;
+#gh::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #fcaf45;
 }
 
 
+#cv::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #55acee;
+}
 
 
+#yt::before {
+      display: inline-block;
+      content: '';
+      border-radius: 100%;
+      height: 4px;
+      width: 4px;
+      margin-right: 6px;
+      background: #c4302b;
+}
 
+#media, #address {
+      text-align: right;
+}
 
+#media ul {
+      list-style: none;
+}
 
+#media ul li {
+      display: inline-block;
+}
 
+@media(max-width: 768px) {
+      .collab, #personal, #media, #address {
+            text-align: center;
+      }
 
+      .info ul {
+            margin: 0 0 0 -22px;
+            padding: 0;
+      }
+}
 
+/*--------------- work page --------------- */
 
+.hero-content {
+      margin-left: 0%;
+}
 
+.hero-content p {
+      font-weight: 300;
+      line-height: 36px;
+      color: grey;
+}
 
+.hero-content h6 {
+      text-align: left;
+}
 
+@media(max-width: 768px) {
+      .hero-content {
+            padding-top: 50px;
+            width: 96%;
+            margin: 0 auto;
+      }
+}
 
+/*---------------about page --------------- */
 
+.about {
+      height: 500px;
+      margin-top: 120px;
+}
 
+.image {
+      background: url(https://images.unsplash.com/photo-1540885762261-a2ca01f290f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2468&q=80) no-repeat 50% 70%;
+}
 
+/*--------------- contact form --------------- */
 
+#contact-form {
+      margin: 5% 1.4%;
+}
 
+#contact-form ul {
+      list-style: none;
+      border-radius: 5px;
+      margin-bottom: 40px;
+}
 
+#contact-form li {
+      padding: 10px;
+}
 
+#contact-form li:last-of-type {
+      border-bottom: none;
+}
 
+#contact-form label {
+      display: block;
+      font-size: .8em;
+      color: #999;
+      padding-left: 5px;
+}
 
+#contact-form input, #contact-form textarea {
+      width: 100%;
+      padding: 5px;
+      border: none;
+      resize: vertical;
+      background: transparent;
+      color: #fff;
+      font-weight: bolder;
+}
 
+input:focus {
+      outline: none;
+      border: none;
+}
 
+textarea:focus {
+      outline: none;
+      border: none;
+}
 
+.textarea {
+      border-bottom: 1px solid #dfdfdf;
+}
 
+.send {
+      margin-left: 50px;
+      text-transform: uppercase;
+      padding: 20px 30px;
+      background: transparent;
+      color: #dfdfdf;
+      font-size: 14px;
+      letter-spacing: 2px;
+}
 
+.send:hover {
+      background: #dfdfdf;
+      color: #101010;
+}
 
+@media(max-width: 768px) {
+      #contact-form {
+            margin: 5% -8%;
+            width: 98%;
+      }
+}
 
+/*--------------- project page --------------- */
 
+.prev, .next p {
+      color: grey;
+}
+
+.prev p {
+      text-align: left;
+}
+
+.next p {
+      text-align: right;
+}
